+ bibliography in English in main TEX-file

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -390,6 +390,235 @@ Machine Learning, 1999. Vol.~37, N.~3. P.~297--336.
 \textit{Zhao~Y., Karypis~G.} Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515--524. doi: 10.1145/584792.584877
 
 \end{thebibliography}
+
+
+
+
+\begin{thebibliographyen}{9}
+
+\bibitem{Averin 2006}
+\textit{Averin A. N.} Razrabotka servisa poiska bigramm [Developing a search engine for bigrams]. // Trudy mezhdunarodnoj konferencii <<Korpusnaja lingvistika 2006>> [Proceedings of the International Conference <<Corpus linguistics 2006>>]. St.~Petersburg: St.~Peterb. un-t, 2006. P.~5--15.
+
+\bibitem{epr:website}
+\textit{Eprev A. S.} Primenenie kontekstnyh vektorov v klassifikacii tekstovyh dokumentov [Applications of context vectors in classification of text documents]. // 
+Zhurnal radiojelektroniki [Journal of radio electronics]. 2010. N~10. URL: http://jre.cplire.ru/iso/oct10/1/text.html (accessed: 21.08.2015).
+
+\bibitem{Kim 1989}
+\textit{Kim~G.~O., M'juller~Ch.~U., Klekka~U.~R.} Faktornyj, diskriminantnyj i klasternyj analiz [Factorial, discriminant and cluster analysis]. Moscow: Finansy i statistika, 1989. P.~172.
+
+\bibitem{Lukash 2011}
+\textit{Loukachevitch N. V.} Tezaurusy v zadachah informacionnogo poiska [Thesauri in information retrieval tasks]. Moscow: MSU, 2011. 495 p.
+
+\bibitem{Marmanis}
+\textit{Marmanis~H., Babenko D.} Algoritmy intellektual'nogo Interneta. Peredovye metodiki sbora, analiza i obrabotki dannyh [Algorithms of the intelligent Web. Advanced methods of data collection, analysis and processing]. St.~Petersburg: Simvol-Plyus, 2011. 480~p.
+
+\bibitem{Paclin}
+\textit{Paklin~N.~B., Oreshkov~V.~I.} Biznes-analitika: ot dannyh k znanijam: Uchebnoe posobie. 2-e izd., ispr. [Business analytics: from data to knowledge. Tutorial]. St.~Petersburg: Piter, 2013. 704~p.
+
+\bibitem{Trudakov 2010}
+\textit{Turdakov D. Yu.} Metody i programmnye sredstva razreshenija leksicheskoj mnogoznachnosti terminov na osnove setej dokumentov [Methods and software tools for resolving lexical ambiguity of terms based on the network of documents]: dis. \ldots\ kand. f.-m. nauk [Ph.~D. thesis, phys.-math.].  Moscow, 2010. 138~c.
+
+\bibitem{Abney 1999}
+\textit{Abney S., Light M.} Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
+
+\bibitem{Azzini}
+\textit{Azzini~A., da Costa Pereira~C., Dragoni~M., Tettamanzi~A.~G.~B.} Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona, 2008. P. 332–337. doi: 10.1109/HIS.2008.88
+
+\bibitem{Barzilay Elhadad 1997}
+\textit{Barzilay~R., Elhadad~M.} Using lexical chains for text summarization // In Proceedings of the ACL Workshop on Intelligent Scalable Text Summarization (Madrid, Spain). 1997. P. 10--17.
+
+\bibitem{Berry 1993}
+\textit{Berry~M., Do~T.,  O’Brien~G.,  Krishna~V., Varadhan~S.} SVDPACK (version 1.0) user’s guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
+
+\bibitem{Breiman}
+\textit{Breiman~L.} Arcing classifiers. The Annals of Statistics. 1998. Vol. 26, N 3. P. 801--849.
+
+\bibitem{Bruce 1994}
+\textit{Bruce~R.,  Wiebe~J.} Word-sense disambiguation using decomposable models // In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994. P. 139--146. doi: 10.3115/981732.981752
+
+\bibitem{Wu}
+\textit{Carpuat~M., Wu~D.} Evaluating the word sense disambiguation performance of statistical machine translation. In Proceedings of the second international joint conference on natural language processing (IJCNLP), 2005, pp. 122–127. URL: http://www.aclweb.org/anthology/I05-2021 (дата обращения: 20.08.2015).
+
+\bibitem{Ciaramita 2000}
+\textit{Ciaramita~M., Johnson~M.} Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. In Proceedings of the 18th conference on Computational linguistics, 2000. Vol.~1. P. 187--193.
+
+\bibitem{COTTRELL 1983}
+\textit{Cottrell~G.~W., Small~S.~L.} A connectionist  scheme for modelling word  sense  disambiguation // Cognition and brain theory. 1983. N~6. P.~89--120. 
+
+\bibitem{COTTRELL 1989}
+\textit{Cottrell G. W. }A connectionist approach to word sense disambiguation / Pitman, London, 1989.
+
+\bibitem{Do Thuy Duong 2011}
+\textit{Duong D. T. }Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
+
+\bibitem{Donald 1990}
+\textit{Hindle D.} Noun classification from predicate-argument structures // In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990. P. 268--275.
+
+%\bibitem{Charles 1993}
+%\textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  %Cognition, Elsevier, 1993.
+
+%\bibitem{Dekang 1998}
+%\textit{Lin D. }Automatic Retrieval and Clustering of Similar Words.Proceedings of the 17th international conference on Computational %linguistics-Volume 2. – Association for Computational Linguistics, Department of Computer Science University of Manitoba Winnipeg, Manitoba, %Canada, 1998, pp. 768-774. DOI: 10.3115/980432.980696
+
+%\bibitem{Dekang 1993}
+%\textit{Lin D. }Principle-based parsing without overgeneration. In Proceedings of ACL-93, Columbus, Ohio, 1993, pp. 112-120. DOI: %10.3115/981574.981590
+
+%\bibitem{Dekang 1997}
+%\textit{Lin D. }Using syntactic dependency as local context to resolve word sense ambiguity. In Proceedings of ACL/EACL-97, Madrid, Spain, %July, 1997, pp. 64-71. DOI: 10.3115/979617.979626
+
+%\bibitem{Donald 1990}
+%\textit{Hindle D. }Noun classification from predicate-argument structures. In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990, pp. %268-275.
+
+%\bibitem{Do Thuy Duong 2011}
+%\textit{Duong D. T. }Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
+
+\bibitem{esc1}
+\textit{Escudero~G., M\`{a}rquez~L., Rigau~G.} Using LazyBoosting for word sense disambiguation. 
+In Proceedings of the Second International Workshop on evaluating Word Sense Disambiguation Systems. Toulouse, France, 2001, pp. 71--74.
+
+\bibitem{esc2}
+\textit{Escudero~G., M\`{a}rquez~L., Rigau~G.} Boosting Applied to Word Sense Disambiguation. In Proceedings of the 12th 
+European Conference on Machine Learning, ECML. Barcelona, Catalonia. 2000. 
+
+\bibitem{Freund 1999}
+\textit{Freund~Y., Schapire~R.~E.} A Short Introduction to Boosting // Journal of Japanese Society for Artificial Intelligence, 1999. Vol.~14, N~5. P.~771--780.
+
+\bibitem{Freund 1996}
+\textit{Freund Y.,  Schapire R. E.} Game theory, on-line prediction and boosting // In Proceedings of the Ninth Annual Conference on Computational Learning Theory, 1996. P. 325--332.
+
+\bibitem{Freund 1997}
+\textit{Freund Y.,  Schapire R. E.} A decision-theoretic generalization of on-line learning and an application to boosting // Journal of Computer and System Sciences. 1997. P. 119–139. doi: 10.1006/jcss.1997.1504
+
+\bibitem{Halliday Hasan 1976}
+\textit{Halliday~M., Hasan~R.} Cohesion in English / London: Longman, 1976. 
+
+\bibitem{Harris 1985}
+\textit{Harris~Z.} Distributional structure // In: Katz~J.~J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press, 1985. P. 26--47.
+
+\bibitem{Hearst 1994}
+\textit{Hearst~M.} Multi-paragraph segmentation of expository text // In Proceedings of the 32th Annual Meeting of the Association for Computational Linguistics, 9--16. Las Cruces, New Mexico: Association for Computational Linguistics. 1994. doi: 10.3115/981732.981734
+
+\bibitem{Hinton 1986}
+\textit{Hinton~G.~E.,  McClelland~J.~L.,  Rumelhart~D.~E.} Distributed representations // In Parallel Processing: explorations in the microstructure of cognition. MIT Press, Cambridge, MA, 1986. P.~5--44.
+
+\bibitem{Hirst St-Onge 1998}
+\textit{Hirst~G., St-Onge~D.} Lexical chains as representations of context for the detection and correction of malapropisms. WordNet: An electronic lexical database, 1998. P. 305--332.
+
+\bibitem{Hoey 1991}
+\textit{Hoey M.} Patterns of Lexis in Text / Oxford: Oxford University Press, 1991. 
+
+\bibitem{Jain 1988}
+\textit{Jain~A., Dubes~R.} Algorithms for Clustering Data / Prentice-Hall, Inc., Upper Saddle River, NJ, 1988.
+
+\bibitem{Jain 1999}
+\textit{Jain~A., Murthy~M., Flynn~P.} Data clustering: a review // ACM Computing Surveys, 1999. Vol.~31, N.~3. P.~264--323. doi: 10.1145/331499.331504
+
+\bibitem{Leacock 1993}
+\textit{Leacock~C., Towell~G., Voorhees~E.} Corpus-based statistical sense resolution // In Proceedings of the ARPA Workshop on Human Language Technology, 1993. P. 260--265.  
+
+\bibitem{LESK 1986}
+\textit{Lesk M. }Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone //  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24–26. doi: 10.1145/318723.318728
+
+\bibitem{Dekang 1998}
+\textit{Lin~D.} Automatic Retrieval and Clustering of Similar Words // Proceedings of the 17th International Conference on 
+Computational linguistics. University of Manitoba, Manitoba, Canada, 1998. Vol.~2. P.~768--774. doi: 10.3115/980432.980696
+
+\bibitem{Dekang 1993}
+\textit{Lin D. }Principle-based parsing without overgeneration // In Proceedings of ACL-93, Columbus, Ohio, 1993. P.~112--120. doi: 10.3115/981574.981590
+
+\bibitem{Dekang 1997}
+\textit{Lin D.} Using syntactic dependency as local context to resolve word sense ambiguity // In Proceedings of ACL/EACL-97, Madrid, Spain, 1997. P.~64--71. doi: 10.3115/979617.979626
+
+\bibitem{Lin 2001}
+\textit{Lin~D., Pantel~P.} Induction of semantic classes from natural language text // In Proceedings of SIGKDD-01. San Francisco, CA. 2001. P.~317--322. doi: 10.1145/502512.502558  
+
+\bibitem{Charles 1993}
+\textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs /  Cognition, Elsevier, 1993.
+
+
+\bibitem{Manning 1999}
+\textit{Manning~C.~D., Sch\"utze~H.} Foundations of Statistical Natural Language Processing / MIT Press, 1999.
+
+\bibitem{Merz 1998}
+\textit{Merz~C.~J., Murphy~P.~M.} UCI repository of machine learning databases, 1998. URL: www.ics.uci.edu/ mlearn/MLRepository.html (дата обращения: 24.04.2015).
+
+\bibitem{Miller 1990}
+\textit{Miller G.} Wordnet: An on-line lexical database // International Journal of Lexicography, 1990. Vol.~3, N.~4.
+
+\bibitem{Mooney 1996}
+\textit{Mooney R. J. }Comparative Experiments on Disambiguating Word Senses:
+An Illustration of the Role of Bias in Machine Learning / Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1996.
+
+\bibitem{Mooney 1995}
+\textit{Mooney R. J., Califf M. E. }Induction of First-Order Decision Lists: Results on Learning the Past Tense of English Verbs / Department of Computer Sceinces, University of Texas, Austin, TX 78712-1188, 1995.
+
+\bibitem{Morris Hirst 1991}
+\textit{Morris~J., Hirst~G.} Lexical cohesion computed by thesaural relations as an indicator of the structure of text // Computational Linguistics, 1991. Vol.~17, N.~1. P.~21--43.
+
+\bibitem{Navigli 2009}
+\textit{Navigli~R.} Word sense disambiguation: A~survey. ACM Computing Surveys (CSUR), 2009. Vol.~41, N.~2. doi: 10.1145/1459352.1459355
+
+\bibitem{Eugene 1975}
+\textit{Nida Eugene A.} Componential Analysis of Meaning / The Hague, Mouton, 1975.
+
+\bibitem{Pantel 2002}
+\textit{Pantel P.,  Lin D.} Discovering Word Senses from Text / University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002. doi: 10.1145/775047.775138
+
+\bibitem{Pedersen 2000}
+\textit{Pedersen T.} A Simple Approach to Building Ensembles of Naive Bayesian Classifers for Word Sense Disambiguation / Department of Computer Science, University of Minnesota Duluth, 2000.
+
+\bibitem{Pedersen 1997}
+\textit{Pedersen~T., Bruce~R.} Distinguishing word senses in untagged text // Proceedings of the Second Conference on Empirical Methods in Natural Language Processing, 1997.
+
+\bibitem{Purandare 2004}
+\textit{Purandare~A., Pedersen~T.} Improving word sense discrimination with gloss augmented feature vectors // Workshop on Lexical Resources for the Web and Word Sense Disambiguation, 2004. P.~123--130. 
+
+\bibitem{Quinlan 1993}
+\textit{Quinlan J. R. }C4.5: Programs for Machine Learning / Morgan Kaufmann, 1993. 
+
+\bibitem{Resnik 1997}
+\textit{Resnik~P.} Selectional preference and sense disambiguation / In Proceedings of the ANLP-97 Workshop: Tagging Text with Lexical Semantics: Why, What, and How? 1997.
+
+\bibitem{Savova 2005}
+\textit{Savova~G., Pedersen~T., Purandare~A., Kulkarni~A.} Resolving ambiguities in biomedical text with unsupervised clustering approaches / University of Minnesota Supercomputing Institute Research Report, 2005.
+
+\bibitem{schapire99}
+\textit{Schapire~R.~E., Singer~Y.} Improved Boosting Algorithms Using Confidence-rated Predictions. 
+Machine Learning, 1999. Vol.~37, N.~3. P.~297--336.
+
+\bibitem{Schapire 1998}
+\textit{Schapire~R.~E., Singer~Y.} Improved boosting a predictions // In Proceedings of the Eleventh Annual Conference Theory, 1998. P.~80--91. 
+
+\bibitem{Schapire 1997}
+\textit{Schapire~R.~E.} Using output codes to boost multiclass learning problems. In Machine Learning // Proceedings of the Fourteenth International Conference, 1997. P.~313--321. 
+
+\bibitem{Schutze 1998}
+\textit{Sch$\ddot{u}$tze H. }Automatic Word Sense Discrimination // Computational Linguistics, 1998. Vol.~24, N.~1.
+
+\bibitem{SC:website}
+\textit{SenseClusters.}  \newline URL: http://senseclusters.sourceforge.net (дата обращения: 24.04.2015).
+
+\bibitem{UMLS:website}
+\textit{UMLS Terminology Services (UTS).} URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015).
+
+\bibitem{VERONIS 1990}
+\textit{Veronis~J., Ide~N.} Word sense disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // Proceedings of the 13th International Conference on Computational Linguistics. Helsinki, 1990. P.~389--394. doi: 10.3115/997939.998006
+
+\bibitem{WALTZ 1985}
+\textit{Waltz~D.~L., Pollack~J.~B.} Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation // Cognitive science, 1985. N.~9. P.~51--74. doi: 10.1207/s15516709cog0901\_4
+                     
+\bibitem{Weeber 2001}
+\textit{Weeber~M.,  Mork~J.~G., Aronson~A.~R.} Developing a test collection for biomedical word sense disambiguation // In Proceedings of the AMIA Symposium, Chicago, 2001. P.~746--750.
+
+\bibitem{Zhao 2002}
+\textit{Zhao~Y., Karypis~G.} Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515--524. doi: 10.1145/584792.584877
+
+\end{thebibliographyen}
+
+
+
+
+
 \end{articletext}
 
 
@@ -555,23 +784,23 @@ tel.: (8142) 711078\\
 e-mail: hogdp@mail.ru
 \end{aboutauthors}
 
-%\begin{aboutauthors}
-%\authorsname{Ткач Станислав Сергеевич}
-%Студент\\
-%Математический факультет\\ 
-%Петрозаводский государственный университет\\
-%пр. Ленина, 33, Петрозаводск, Республика Карелия\\
-%тел.: (8142) 711078\\
-%эл. почта: tkachkras@gmail.com
-%
-%\columnbreak
-%
-%\authorsname{Tkach, Stanislav}
-%Petrozavodsk State University\\
-%33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
-%tel.: (8142) 711078\\
-%e-mail: tkachkras@gmail.com 
-%\end{aboutauthors}
+\begin{aboutauthors}
+\authorsname{Ткач Станислав Сергеевич}
+Студент\\
+Математический факультет\\ 
+Петрозаводский государственный университет\\
+пр. Ленина, 33, Петрозаводск, Республика Карелия\\
+тел.: (8142) 711078\\
+эл. почта: tkachkras@gmail.com
+
+\columnbreak
+
+\authorsname{Tkach, Stanislav}
+Petrozavodsk State University\\
+33, Lenin St., 185910, Petrozavodsk, Republic of Karelia, Russia\\
+tel.: (8142) 711078\\
+e-mail: tkachkras@gmail.com 
+\end{aboutauthors}
 
 \begin{aboutauthors}
 \authorsname{Чиркова Юлия Васильевна}
