--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -30,7 +30,7 @@
 \organization{$^1$»нститут прикладных математических исследований  арельского научного центра –јЌ \\
 $^2$ѕетрозаводский √осударственный ”ниверситет}
 
-\rusabstract{–азрешение лексической многозначности~(WSD) --- это задача выбора между разными значени€ми 
+\rusabstract{–азрешение лексической многозначности~(WSD) -- это задача выбора между разными значени€ми 
 слов и словосочетаний в словаре в зависимости от контекста. 
 ¬ статье представлен краткий обзор методов и алгоритмов разрешени€ лексической многозначности. 
 Ёти методы используют различный математический и алгоритмический аппарат дл€ решени€ WSD-задачи: нейронные сети, 
