--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -88,7 +88,7 @@ This paper is licensed under the CC Attribution license.}
 
 ƒалее будут представлены примеры методов и алгоритмов разрешени€ лексической многозначности, разбитые на группы: 
 \begin{itemize}
-\item нейронные сети --- многообещающие методы с богатой историей;
+\item нейронные сети --- многообещающие \mbox{методы} с богатой историей;
 \item бустинг как метод улучшени€ точности алгоритма обучени€;
 \item лексические цепочки --- построение последовательности семантически св€занных слов;
 \item метод ансамбл€ байесовских классификаторов и сочетаемостные ограничени€ на основе байесовских сетей;
@@ -391,7 +391,14 @@ Machine Learning, 1999. Vol.~37, N.~3. P.~297--336.
 
 \end{thebibliography}
 
+\bfullwidth
+\vspace*{-0.4cm}
+ \begin{flushright}
+{\sl ѕоступила в редакцию 02.04.2015}
+ \end{flushright}
 
+\ %\vspace*{-0.3cm}
+\efullwidth
 
 
 \begin{thebibliographyen}{9}
@@ -616,6 +623,11 @@ Machine Learning, 1999. Vol.~37, N.~3. P.~297--336.
 \end{thebibliographyen}
 
 
+
+\vspace*{-0.1cm}
+ \begin{flushright}
+{\sl Received April 02, 2015}
+ \end{flushright}
 
 
 
