--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -15,10 +15,12 @@
 \usepackage{wrapfig}
 %\usepackage[dvips]{graphicx}
 \graphicspath{ {./pictures/} }
-
+\newcounter{fpage}
+\setcounter{fpage}{69} % номер первой страницы статьи
+\setcounter{page}{69}  % = предыдущему
 \begin{document}
 
-\procname{Труды Карельского научного центра РАН\\ \No~10. 2015. С.~1--27}
+\procname{Труды Карельского научного центра РАН\\ \No~10. 2015. С.~69--98\\ {\bf DOI: 10.17076/mat135}}
 \udk{УДК 81.32}
 
 \rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности: Введение}
@@ -52,8 +54,8 @@ The experimental comparison of different algorithms concludes this review.
 This paper is licensed under the CC Attribution license.}
 
 \ruskeywords{разрешение лексической многозначности, нейронная сеть, бустинг, лексическая цепочка, наивный байесовский классификатор, байесовская сеть, сочетаемостные ограничения, различение значений слов.}
-\engkeywords{word-sense disambiguation, neural network, boosting, lexical chain, naive Bayes classifier, Bayesian network, selectional preferences, word-sense discrimination.}
-
+\engkeywords{word-sense disambiguation, neural network, boosting, lexical chain, Bayesian network, selectional preferences, word-sense discrimination.}
+%, naive Bayes classifier
 \maketitle
 
 \begin{articletext}
@@ -110,7 +112,7 @@ This paper is licensed under the CC Attribution license.}
 
 В первой части главы строится ансамбль наивных байесовских классификаторов. Наивный байесовский классификатор -- это простой вероятностный классификатор на основе применения теоремы Байеса. Для различения значений учитывается совместная встречаемость слов в окне заданного размера в текстах корпуса.
 
-Во второй части главы для каждого глагола строится байесовская сеть. Байесовская модель обучается сочетаемостным ограничениям глаголов, то есть обучается тому -- с какими существительными глаголы могут употребляться. Сочетаемостные ограничения позволяют ограничить число значений целевого слова по данным контекста~\cite{Navigli 2009} (с. 10:32). Связи глагол-существительное извлекаются из корпуса текстов, а классы существительных задаются тезаурусом WordNet. Маловероятные значения слов при построении сочетаемостных ограничений отбрасываются (стратегия <<explaining away>>).
+Во второй части главы для каждого глагола строится байесовская сеть. Байесовская модель обучается сочетаемостным ограничениям глаголов, т. е. обучается тому, с какими существительными глаголы могут употребляться. Сочетаемостные ограничения позволяют ограничить число значений целевого слова по данным контекста~\cite{Navigli 2009} (с. 10:32). Связи глагол-существительное извлекаются из корпуса текстов, а классы существительных задаются тезаурусом WordNet. Маловероятные значения слов при построении сочетаемостных ограничений отбрасываются (стратегия <<explaining away>>).
 
 %\columnbreak
 \input{./chapter/Chuharev_bayes}
@@ -147,7 +149,7 @@ This paper is licensed under the CC Attribution license.}
 
 Алгоритм кластеризации посредством комитетов, представленный во второй части раздела,
 также можно отнести к задаче \textit{различения значения слов}. 
-В алгоритме последовательно вычисляется сходство между словами,  строится набор компактных кластеров (комитетов), все слова распределяются по этим кластерам
+В алгоритме последовательно вычисляется сходство между словами,  строится набор компактных кластеров (комитетов), все слова распределяются по этим кластерам.
 
 \input{./chapter/Shorets_clustering.tex}
 \columnbreak
@@ -162,11 +164,11 @@ This paper is licensed under the CC Attribution license.}
 
 \section{Заключение}
 
-Разрешение лексической многозначности - это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. Задача разрешения лексической многозначности является открытой проблемой, то есть крайне интересной и привлекательной с научной точки зрения.
+Разрешение лексической многозначности -- это задача выбора между разными значениями слов и словосочетаний в словаре в зависимости от контекста. Задача разрешения лексической многозначности является открытой проблемой, т. е. крайне интересной и привлекательной с научной точки зрения.
 
 В статье представлен краткий обзор методов и алгоритмов, применяемых для разрешения лексической многозначности. Эти методы используют различный математический и алгоритмический аппарат для решения WSD-задачи: нейронные сети, адаптивный алгоритм улучшения точности обучения AdaBoost, построение лексических цепочек, методы на основе применения теоремы Байеса и методы кластеризации контекстных векторов и семантически близких слов. Работу завершает исследование, в котором сравниваются время обучения, время работы и результаты работы разных алгоритмов решения WSD-задачи.
 
-Работа В.~Г.~Старковой поддержана грантом РГНФ (проект № 15-04-12029), работа А.~Н.~Кириллова и Ю.~В.~Чирковой поддержана грантом РГНФ (проект № 15-04-12006). Работа А.~А.~Крижановского выполнена при частичной финансовой поддержке Программы фундаментальных исследований Секции литературы и языка ОИФН РАН «Язык  и информационные технологии» 2015-2017 (проект «Корпус вепсского языка: разработка и формирование морфологической базы электронного ресурса»).
+Работа В.~Г.~Старковой поддержана грантом РГНФ (проект № 15-04-12029), работа А.~Н.~Кириллова и Ю.~В.~Чирковой поддержана грантом РГНФ (проект № 15-04-12006). Работа А.~А.~Крижановского выполнена при частичной финансовой поддержке Программы фундаментальных исследований Секции литературы и языка ОИФН РАН «Язык  и информационные технологии» 2015--2017 (проект «Корпус вепсского языка: разработка и формирование морфологической базы электронного ресурса»).
  
  \newpage
  
@@ -533,7 +535,7 @@ Computational linguistics. University of Manitoba, Manitoba, Canada, 1998. Vol.~
 \bibitem{Lin 2001}
 \textit{Lin~D., Pantel~P.} Induction of semantic classes from natural language text // In Proceedings of SIGKDD-01. San Francisco, CA. 2001. P.~317--322. doi: 10.1145/502512.502558  
 
-\bibitem{Charles 1993}
+\bibitem{Charles 1993} 
 \textit{Ling Charles X.,  Marinov M.} Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs. Cognition, Elsevier, 1993.
 
 \bibitem{Manning 1999}
