--- a/wsd_part1/krctran_modified.sty
+++ b/wsd_part1/krctran_modified.sty
@@ -128,7 +128,7 @@
 		    \noindent\parbox{\abstractwidth}{\small{Ê\,ë\,þ\,÷\,å\,â\,û\,å~~c\,ë\,î\,â\,à: }\@ruskeywords}\\[5mm]
 		    \noindent\parbox{\abstractwidth}{\bfseries\@engauthor. \MakeUppercase\@engtitle}\\[3.175mm]
 		    \noindent\parbox{\abstractwidth}{\small\@engabstract}\\[3.175mm]
-		    \noindent\parbox{\abstractwidth}{\small{K\,e\,y\,w\,o\,r\,d\,s: }\@engkeywords}\\[1mm]
+		    \noindent\parbox{\abstractwidth}{\small{K\,e\,y~~w\,o\,r\,d\,s: }\@engkeywords}\\[1mm]
 		    \rule{\abstractwidth}{\linethickness}\\[1mm]
 	    }
     }
