petrsu, then KarRC in header :(

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -26,11 +26,11 @@
 \rustitle{Обзор методов и алгоритмов разрешения \newline лексической многозначности: Введение}
 \engtitle{A review of word-sense disambiguation methods and algorithms: Introduction}
 
-\rusauthor{Т.~В.~Каушинис$^2$,  А.~Н.~Кириллов$^1$,  Н.~И.~Коржицкий$^2$, А.~А.~Крижановский$^1$, А.~В.~Пилинович$^2$, И.~А.~Сихонина$^2$,  А.~М.~Спиркова$^2$, В.~Г.~Старкова$^1$, Т.~В.~Степкина$^2$, С.~С.~Ткач$^2$, Ю.~В.~Чиркова$^1$, А.~Л.~Чухарев$^1$,  Д.~С.~Шорец$^2$,  Д.~Ю.~Янкевич$^2$, Е.~А.~Ярышкина$^2$}
-\engauthor{T.~V.~Kaushinis$^2$, A.~N.~Kirillov$^1$, N.~I.~Korzhitsky$^2$, A.~A.~Krizhanovsky$^1$, A.~V.~Pilinovich$^2$, I.~A.~Sikhonina$^2$, A.~M.~Spirkova$^2$, V.~G.~Starkova$^1$, T.~V.~Stepkina$^2$, S.~S.~Tkach$^2$, J.~V.~Chirkova$^1$, A.~L.~Chuharev$^1$, D.~S.~Shorets$^2$, D.~Y.~Yankevich$^2$, E.~A.~Yaryshkina$^2$}
+\rusauthor{Т.~В.~Каушинис$^1$,  А.~Н.~Кириллов$^2$,  Н.~И.~Коржицкий$^1$, А.~А.~Крижановский$^2$, А.~В.~Пилинович$^1$, И.~А.~Сихонина$^1$,  А.~М.~Спиркова$^1$, В.~Г.~Старкова$^2$, Т.~В.~Степкина$^1$, С.~С.~Ткач$^1$, Ю.~В.~Чиркова$^2$, А.~Л.~Чухарев$^2$,  Д.~С.~Шорец$^1$,  Д.~Ю.~Янкевич$^1$, Е.~А.~Ярышкина$^1$}
+\engauthor{T.~V.~Kaushinis, A.~N.~Kirillov, N.~I.~Korzhitsky, A.~A.~Krizhanovsky, A.~V.~Pilinovich, I.~A.~Sikhonina, A.~M.~Spirkova, V.~G.~Starkova, T.~V.~Stepkina, S.~S.~Tkach, Ju.~V.~Chirkova, A.~L.~Chuharev, D.~S.~Shorets, D.~Yu.~Yankevich, E.~A.~Yaryshkina}
 
-\organization{$^1$Институт прикладных математических исследований Карельского научного центра РАН \\
-$^2$Петрозаводский Государственный Университет}
+\organization{$^1$ Петрозаводский Государственный Университет \\
+$^2$ Институт прикладных математических исследований Карельского научного центра РАН}
 
 \rusabstract{Разрешение лексической многозначности~(WSD) -- это задача выбора между разными значениями 
 слов и словосочетаний в словаре в зависимости от контекста. 
@@ -371,7 +371,7 @@ Machine Learning, 1999. Vol.~37, N~3. P.~297--336.
 \textit{SenseClusters.}  \newline URL: http://senseclusters.sourceforge.net (дата обращения: 24.04.2015)
 
 \bibitem{UMLS:website}
-\textit{UMLS} Terminology Services (\textit{UTS}). URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015)
+\textit{UMLS} Terminology Services (UTS). URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015)
 
 \bibitem{VERONIS 1990}
 \textit{Veronis~J., Ide~N.} Word sense disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // In Proceedings of the 13th International Conference on Computational Linguistics. Helsinki, 1990. P.~389--394. doi: 10.3115/997939.998006
@@ -407,7 +407,7 @@ Machine Learning, 1999. Vol.~37, N~3. P.~297--336.
 
 \bibitem{epr:website}
 \textit{Eprev A. S.} Primenenie kontekstnyh vektorov v klassifikacii tekstovyh dokumentov [Applications of context vectors in classification of text documents]. 
-Zhurnal radiojelektroniki [Journal of radio electronics]. 2010. N~10. URL: http://jre.cplire.ru/iso/oct10/1/text.html (accessed: 21.08.2015).
+Zhurnal radiojelektroniki [Journal of radio electronics]. 2010. N~10. URL: http://jre.cplire.ru/iso/oct10/1/text.html (accessed: 21.08.2015)
 
 \bibitem{Kim 1989}
 \textit{Kim~G.~O., M'juller~Ch.~U., Klekka~U.~R.} Faktornyj, diskriminantnyj i klasternyj analiz [Factorial, discriminant and cluster analysis]. Moscow: Finansy i statistika, 1989. P.~172.
@@ -601,10 +601,10 @@ Machine Learning, 1999. Vol.~37, N~3. P.~297--336.
 \textit{SenseClusters.}  \newline URL: http://senseclusters.sourceforge.net (дата обращения: 24.04.2015)
 
 \bibitem{UMLS:website}
-\textit{UMLS} Terminology Services (\textit{UTS}). URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015)
+\textit{UMLS} Terminology Services (UTS). URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращения: 22.04.2015)
 
 \bibitem{VERONIS 1990}
-\textit{Veronis~J., Ide~N.} Word sense disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // In Proceedings of the 13th International Conference on Computational Linguistics. Helsinki, 1990. P.~389--394. doi: 10.3115/997939.998006
+\textit{Veronis~J., Ide~N.} Word sense disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries. In Proceedings of the 13th International Conference on Computational Linguistics. Helsinki, 1990. P.~389--394. doi: 10.3115/997939.998006
 
 \bibitem{WALTZ 1985}
 \textit{Waltz~D.~L., Pollack~J.~B.} Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation. Cognitive science, 1985. N~9. P.~51--74. doi: 10.1207/s15516709cog0901\_4
@@ -771,7 +771,6 @@ tel.: (8142) 711078
 Институт прикладных математических исследований\\
 Карельского научного центра РАН\\ 
 ул. Пушкинская, 11, Петрозаводск, \\
-пр. Ленина, 33, Петрозаводск, \\
 Республика Карелия, Россия, 185910 \\
 эл. почта: stark\_val@mail.ru\\ 
 тел.: (8142) 766312
@@ -871,7 +870,7 @@ tel.: (8142) 766312
 пр. Ленина, 33, Петрозаводск, \\
 Республика Карелия, Россия, 185910 \\
 эл. почта: da\_sha1078@mail.ru\\ 
-тел: (8142) 711078
+тел.: (8142) 711078
 
 \columnbreak
 
@@ -882,7 +881,8 @@ e-mail: da\_sha1078@mail.ru\\
 tel.: (8142) 711078
 \end{aboutauthors}
 
-\begin{aboutauthors_without_page_numbering}
+%\begin{aboutauthors_without_page_numbering}
+\begin{aboutauthors}
 \authorsname{Ярышкина Екатерина Александровна}
 студентка\\ 
 Математический факультет\\ 
@@ -890,7 +890,7 @@ tel.: (8142) 711078
 пр. Ленина, 33, Петрозаводск, \\
 Республика Карелия, Россия, 185910 \\
 эл. почта: kate.rysh@gmail.com\\ 
-тел: (8142) 711078
+тел.: (8142) 711078
 
 \columnbreak
 
@@ -899,9 +899,11 @@ Petrozavodsk State University\\
 33, Lenina St., 185910, Petrozavodsk, Karelia, Russia\\
 e-mail: kate.rysh@gmail.com\\ 
 tel.: (8142) 711078
-\end{aboutauthors_without_page_numbering}
+\end{aboutauthors}
+%\end{aboutauthors_without_page_numbering}
 
-\begin{aboutauthors_without_page_numbering}
+%\begin{aboutauthors_without_page_numbering}
+\begin{aboutauthors}
 \authorsname{Янкевич Дарья Юрьевна}
 студентка\\ 
 Математический факультет\\ 
@@ -909,7 +911,7 @@ tel.: (8142) 711078
 пр. Ленина, 33, Петрозаводск, \\
 Республика Карелия, Россия, 185910 \\
 эл. почта: dyankevic@gmail.com\\ 
-тел: (8142) 711078
+тел.: (8142) 711078
 
 \columnbreak
 
@@ -918,7 +920,8 @@ Petrozavodsk State University\\
 33, Lenina St., 185910, Petrozavodsk, Karelia, Russia\\
 e-mail: dyankevic@gmail.com\\ 
 tel.: (8142) 711078\\
-\end{aboutauthors_without_page_numbering}
+\end{aboutauthors}
+%\end{aboutauthors_without_page_numbering}
 
 
 \end{document}
