PetrSU name fixed, - num at last page

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -29,7 +29,7 @@
 \rusauthor{Т.~В.~Каушинис$^1$,  А.~Н.~Кириллов$^2$,  Н.~И.~Коржицкий$^1$, А.~А.~Крижановский$^2$, А.~В.~Пилинович$^1$, И.~А.~Сихонина$^1$,  А.~М.~Спиркова$^1$, В.~Г.~Старкова$^2$, Т.~В.~Степкина$^1$, С.~С.~Ткач$^1$, Ю.~В.~Чиркова$^2$, А.~Л.~Чухарев$^2$,  Д.~С.~Шорец$^1$,  Д.~Ю.~Янкевич$^1$, Е.~А.~Ярышкина$^1$}
 \engauthor{T.~V.~Kaushinis, A.~N.~Kirillov, N.~I.~Korzhitsky, A.~A.~Krizhanovsky, A.~V.~Pilinovich, I.~A.~Sikhonina, A.~M.~Spirkova, V.~G.~Starkova, T.~V.~Stepkina, S.~S.~Tkach, Ju.~V.~Chirkova, A.~L.~Chuharev, D.~S.~Shorets, D.~Yu.~Yankevich, E.~A.~Yaryshkina}
 
-\organization{$^1$ Петрозаводский Государственный Университет \\
+\organization{$^1$ Петрозаводский государственный университет \\
 $^2$ Институт прикладных математических исследований Карельского научного центра РАН}
 
 \rusabstract{Разрешение лексической многозначности~(WSD) -- это задача выбора между разными значениями 
@@ -902,8 +902,8 @@ tel.: (8142) 711078
 \end{aboutauthors}
 %\end{aboutauthors_without_page_numbering}
 
-%\begin{aboutauthors_without_page_numbering}
-\begin{aboutauthors}
+\begin{aboutauthors_without_page_numbering}
+%\begin{aboutauthors}
 \authorsname{Янкевич Дарья Юрьевна}
 студентка\\ 
 Математический факультет\\ 
@@ -920,8 +920,8 @@ Petrozavodsk State University\\
 33, Lenina St., 185910, Petrozavodsk, Karelia, Russia\\
 e-mail: dyankevic@gmail.com\\ 
 tel.: (8142) 711078\\
-\end{aboutauthors}
-%\end{aboutauthors_without_page_numbering}
+%\end{aboutauthors}
+\end{aboutauthors_without_page_numbering}
 
 
 \end{document}
