--- a/scratch/s1book.tex
+++ b/scratch/s1book.tex
@@ -4,7 +4,7 @@
 
 %%
 % Book metadata
-\title{A Tufte-Style Book\thanks{Thanks to Edward R.~Tufte for his inspiration.}}
+\title{Программирование на языке Scratch для школьников\thanks{Thanks to Edward R.~Tufte for his inspiration.}}
 \author[The Tufte-LaTeX Developers]{The Tufte-LaTeX\ Developers}
 \publisher{Publisher of This Book}
 
