--- a/scratch/s1book.tex
+++ b/scratch/s1book.tex
@@ -1,5 +1,20 @@
 \documentclass{tufte-book}
 
+\usepackage{cmap}
+
+\usepackage[T1]{fontenc}
+
+\usepackage[russian]{babel}
+
+\usepackage[utf8]{inputenc}
+
+\renewcommand{\rmdefault}{cmr}
+
+\renewcommand{\sfdefault}{cmss}
+
+\renewcommand{\ttdefault}{cmtt}
+
+
 \hypersetup{colorlinks}% uncomment this line if you prefer colored hyperlinks (e.g., for onscreen viewing)
 
 %%
