from scratch to app inventor 2

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -19,7 +19,7 @@
 
 %%
 % Book metadata
-\title{Программирование на языке Scratch для школьников\thanks{Thanks to Edward R.~Tufte for his inspiration.}}
+\title{Программирование андроидов для школьников в среде App Inventor 2\thanks{Thanks to Edward R.~Tufte for his inspiration.}}
 \author[The Tufte-LaTeX Developers]{The Tufte-LaTeX\ Developers}
 \publisher{Publisher of This Book}
 
