--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -20,7 +20,7 @@
 %%
 % Book metadata
 \title{Программирование андроидов для школьников в среде App Inventor 2\thanks{Thanks to Edward R.~Tufte for his inspiration.}}
-\author[The Tufte-LaTeX Developers]{The Tufte-LaTeX\ Developers}
+\author[Крижановский Андрей, Студентов Иван, ... ]{Крижановский Андрей,\ Студентов Иван,\ добавьте свою фамилию и имя ...}
 \publisher{Publisher of This Book}
 
 %%
