--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -20,7 +20,7 @@
 %%
 % Book metadata
 \title{Программирование андроидов для школьников в среде App Inventor 2\thanks{Thanks to Edward R.~Tufte for his inspiration.}}
-\author[Крижановский Андрей, Панфилова Оксана ... ]{Крижановский Андрей,\ Панфилова Оксана,\ добавьте свою фамилию и имя ...}
+\author[Крижановский Андрей, Панфилова Оксана, Захаров Алексей, ... ]{Крижановский Андрей,\ Панфилова Оксана,\ Захаров Алексей,\ добавьте свою фамилию и имя ...}
 \publisher{Publisher of This Book}
 
 %%
