--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -256,6 +256,11 @@ and the use of the \doccls{tufte-book} and \doccls{tufte-handout} document class
 \mainmatter
 
 
+\input{./chapter/Draughts_moves_AKA.tex}
+\input{./chapter/1_to_19_Oksanche.tex}
+\input{./chapter/Need_to_think_Gr3zjd.tex}
+
+
 \chapter{The Design of Tufte's Books}
 \label{ch:tufte-design}
 
