+ biblio (list of references)

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -1210,9 +1210,8 @@ classes rely upon.  Packages marked with an asterisk are optional.
 
 \backmatter
 
-\bibliography{sample-handout}
+\bibliography{ai1references}
 \bibliographystyle{plainnat}
-
 
 \printindex
 
