+ images to change flags game

--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -15,6 +15,9 @@
 \renewcommand{\ttdefault}{cmtt}
 
 
+% If too much notes: see https://tex.stackexchange.com/a/175796/99685
+\usepackage{marginfix}
+
 \hypersetup{colorlinks}% uncomment this line if you prefer colored hyperlinks (e.g., for onscreen viewing)
 
 %%
