--- a/app_inventor/ai1book.tex
+++ b/app_inventor/ai1book.tex
@@ -569,9 +569,7 @@ This style provides \textsc{a}- and \textsc{b}-heads (that is,
 
 If you need more than two levels of section headings, you'll have to define
 them yourself at the moment; there are no pre-defined styles for anything below
-a \Verb|\subsection|.  As Bringhurst points out in \textit{The Elements of
-Typographic Style},\cite{Bringhurst2005} you should ``use as many levels of
-headings as you need: no more, and no fewer.''
+a \Verb|\subsection|.  
 
 The \TL classes will emit an error if you try to use
 \linebreak\Verb|\subsubsection| and smaller headings.
@@ -1045,7 +1043,7 @@ The \TL classes currently only provide three paper sizes: \textsc{a4},
 margins), use the \doccmd[geometry]{geometry} command in the preamble of your
 document (or one of the file hooks).  The full documentation of the
 \doccmd{geometry} command may be found in the \docpkg{geometry} package
-documentation.\cite{pkg-geometry}
+documentation.
 
 
 \section{Customizing Marginal Material}
